<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inscription"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:inputType="textPersonName"
        android:hint="@string/input_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp" />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:inputType="textPersonName"
        android:hint="@string/input_last_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp" />

    <EditText
        android:id="@+id/et_age"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:digits="1234567890"
        android:layout_marginStart="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shift"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp" />

    <Spinner
        android:id="@+id/shift_spiner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teacher"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp" />

    <Spinner
        android:id="@+id/teacher_spiner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="register"
        android:text="@string/sign_up"
        android:layout_marginTop="20dp"
        android:layout_gravity="center" />


</LinearLayout>