<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".NeWazaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_kyo"
                android:textSize="40sp"
                android:textColor="@color/black_900"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p_kyo"
                android:textColor="@color/black_900"
                android:textSize="32sp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="249dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:src="@drawable/kyo1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/deashi"
                android:textSize="30sp"
                android:textColor="@color/black_900" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/deashi_text"
                android:textColor="@color/black_800"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="249dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:src="@drawable/kyo2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hiza"
                android:textSize="30sp"
                android:textColor="@color/black_900" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hiza_text"
                android:textColor="@color/black_800"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="249dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:src="@drawable/kyo3" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sasae"
                android:textSize="30sp"
                android:textColor="@color/black_900" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sasae_text"
                android:textColor="@color/black_800"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="249dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:src="@drawable/kyo4" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/uki"
                android:textSize="30sp"
                android:textColor="@color/black_900" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/uki_text"
                android:textColor="@color/black_800"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="249dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:src="@drawable/kyo5" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/osoto"
                android:textSize="30sp"
                android:textColor="@color/black_900" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/osoto_text"
                android:textColor="@color/black_800"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="249dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:src="@drawable/kyo6" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ogoshi"
                android:textSize="30sp"
                android:textColor="@color/black_900" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/koshi_text"
                android:textColor="@color/black_800"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="249dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:src="@drawable/kyo7" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ouchi"
                android:textSize="30sp"
                android:textColor="@color/black_900" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ouchi_text"
                android:textColor="@color/black_800"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="249dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:src="@drawable/kyo8" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ippon"
                android:textSize="30sp"
                android:textColor="@color/black_900" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ippon_text"
                android:textColor="@color/black_800"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>





