<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/inscription_main"
        android:textColor="@color/black_900"
        android:gravity="center"
        android:background="@color/black_100"
        android:textSize="32sp"
        android:onClick="openInscription"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/teacher_main"
        android:background="@color/black_300"
        android:textColor="@color/black_900"
        android:textSize="32sp"
        android:gravity="center"
        android:onClick="openTeachers"/>

    <TextView
        android:id="@+id/juegos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/fundamental_tech_main"
        android:textColor="@color/black_900"
        android:textSize="32sp"
        android:background="@color/black_100"
        android:onClick="openFundTech"
        android:gravity="center"/>

    <TextView
        android:id="@+id/deportes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/glosari_main"
        android:textSize="32sp"
        android:background="@color/black_300"
        android:textColor="@color/black_900"
        android:onClick="openGlosari"
        android:gravity="center"/>


</LinearLayout>